# tp-parser

./: .gitignore  README.md  pyproject.toml
assets/: my_grammar.txt  test_sentences.txt  tok_sentences.tsv
src/tp_parser/: __main__.py
