[project]
name = "tp-parser"
version = "0.1.0"
description = "A WIP parser for modern Toki Pona."
authors = [
    {name = "AcipenserSturio", email = "AcipenserSturio@users.noreply.github.com"},
]
dependencies = [
    "nltk>=3.8.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
parse = "python -m tp_parser"
test = "python -m tp_parser --test"
